--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #server
-server.port:9080
+server.port:9070
 #Database
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
@@ -23,7 +23,8 @@ enabled: true
 # MVC
 
 #\uC624\uB958 \uCC38\uC870\uD30C\uC77C
-spring.messages.basename=error
+spring.messages.basename=errors
 
 #Form\uD0DC\uADF8\uC5D0\uC11C GET,POST\uC678\uC758 Http\uBA54\uC18C\uB4DC\uC9C0\uC6D0
+
 spring.mvc.hiddenmethod.filter.enabled=true
